<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashActivity"
    android:background="@color/skyblue">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:id="@+id/tekssatu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sitapok"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tekssatu"
        android:id="@+id/teksdua"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sitapokDesc"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teksdua"
        android:width="140dp"
        android:height="53dp"
        android:id="@+id/buttonsatu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="14sp"/>

</RelativeLayout>