<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/skyblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teksregis"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/register"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teksregis"
        android:id="@+id/teksdua"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_a_new_account"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout1"
        android:layout_below="@id/teksdua"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teksnama"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/full_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teksemail"
            android:layout_marginTop="20dp"
            android:text="@string/email_address"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teksphone"
            android:layout_marginTop="20dp"
            android:text="@string/phone"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/phone"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tekspassword"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                tools:text="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:width="230dp"
        android:height="53dp"
        android:id="@+id/btnRegis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/txtSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegis"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/have_an_account_sign_in"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>